some fixes
Took 18 minutes